# AndroidVoiceChanger

./: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml  build-plugin.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Dsp/: Formant.cpp  Formant.h  GranularPitchShifter.cpp  GranularPitchShifter.h  Tilt.cpp  Tilt.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/shepamike/voicechanger/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout/app/src/main/cpp/app/src/main/cpp/: native-lib.cpp
